src/test/deca/context/invalid/created/class-extends-decl2.deca
//Description :
// Test de decl d'un objet de type incompatible
//
// Resultats :
// Erreur


class Premiere{

}

class Seconde extends Premiere{

}

{
int sec = new Premiere();
}
